--- a/src/index.css
+++ b/src/index.css
@@ -97,6 +97,7 @@ body {
 
 button {
   font-family: inherit;
+  color: inherit;
   cursor: pointer;
   border: none;
   outline: none;
